# blast

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  CITATION.cff  CMakeLists.txt  CMakePresets.json  NOTICE  blast.hpp  blast_manipulator.hpp  blast_math.hpp  blast_trajectory.hpp  build_benchmarks.sh  build_cuda.bat  build_examples.bat  build_examples.sh  build_examples_no_gpu.bat  build_tests.bat  build_tests.sh  build_tests_no_gpu.bat  futureCMakeLists.txt  main.cpp  pyproject.toml  readme.md  wishlist.md
benchmarks/: CMakeLists.txt  benchmarks.cpp  benchmarks.cu
blast/: CMakeLists.txt  LICENSE.txt  blast  blast.cuh  blast.h  blast.hpp  blast_containers.hpp  blast_error.hpp  blast_manipulator.hpp  blast_math.hpp  blast_optimization.h  blast_optimization.hpp  blast_profile.hpp  blast_simd.hpp  blast_task.hpp  blast_tasks.hpp  blast_trajectory.hpp  blast_utilities.hpp  blast_world.hpp  catch.hpp  dynamics_mda_nosimp_opt2_custom.hpp  futureCMakeLists.txt
blast/collisions/: Collision_ga.hpp  Collision_gwo.hpp  Collision_pso.hpp  world.h
blast/container/: ObjMatrix.hpp
blast/cuda/: blast_cu_manipulator.cuh  blast_cu_math.cuh  blast_cu_trajectory.cuh  blast_cu_utils.cuh  blast_cuda.cuh
blast/dynamics/: blast_dynamics_MDA.hpp
blast/gpu/: error.cuh  gpu_manipulator.hpp  gpu_trajectory.hpp  kernels.cuh  manipulator.cuh  manipulator.hpp  trajectory.cuh  trajectory.hpp
blast/manipulator/: Gen3.cpp  Gen3.hpp  Kinova_Gen3.hpp  Kinova_Link6.hpp  Link6.cpp  Link6.hpp  R2.cpp  R2.hpp  UR5e.hpp  manipulator.hpp
blast/manipulators/: kinova_gen3.h  kinova_link6.h
blast/math/: Array.hpp  Mat3.hpp  Matrix.hpp  Vec3.hpp  misc.hpp
blast/optimization/: Collision_gwo.hpp  Collision_pso.hpp  constraints.hpp  gwo.hpp  initial_guess.hpp  objective.hpp  optimization.cpp  optimization.hpp  pso.hpp  sqp.hpp
blast/optional/: blast_optional_utilities.hpp
blast/trajectory/: bspline.cpp  bspline.hpp  polynomial_5order.hpp
blast/utilities/: file_io.hpp  is_close.hpp  print.hpp  utilities.hpp
blast/world/: CoDO.hpp  distance.hpp  dynamicbox.hpp  dynamiccapsule.hpp  dynamicdoor.hpp  dynamicsphere.hpp  primitive.hpp  scenes.hpp  world.h  world.hpp
examples/: CMakeLists.txt  blast_nlopt_function_bind.cpp  eval.cpp  eval.cu  eval_collisions.cu  eval_manipulator.cpp  example_01_forward_kinematics.cpp  example_02_trajectory_optimization.cpp  example_03_collision_avoidance.cpp  example_manipulator.cpp  futureCMakeLists.txt  get_bspline_and_basis_functions.cpp  get_start_and_end_pos.cpp  main.cpp  main.cu  main_collision_check.cpp  main_collision_check.cu  main_collisions.cu  main_sqp.cu  print_basis_functions.cpp  result_list.json  task_binpick.json  test.cpp  tests.cu  ur5e.hpp
examples/Demo3/: demo2_tasks_gen3.cpp  demo2_tasks_link6.cpp  kitchen_tasks_link6.cpp
examples/Demo3/Statistics/: demo2_tasks_gen3.cpp  demo2_tasks_link6.cpp  kitchen_tasks_link6.cpp  results_demo2_Link6.json  results_demo2_gen3.json  results_kitchen_Link6.json  results_kitchen_Link6_16x110.json  trajectory_demo2_gen3.csv
examples/Demo3/Trajectories/: demo2_tasks_gen3.cpp  demo2_tasks_link6.cpp  kitchen_tasks_link6.cpp  results_demo2_Link6.json  results_demo2_gen3.json  results_kitchen_Link6.json  trajectory_demo2_Link6.csv  trajectory_demo2_gen3.csv  trajectory_demo2_gen3_acc.csv  trajectory_demo2_gen3_pos.csv  trajectory_demo2_gen3_vel.csv  trajectory_demo2_link6_acc.csv  trajectory_demo2_link6_pos.csv  trajectory_demo2_link6_vel.csv  trajectory_full_gen3.csv  (+2 more)
examples/ICRA2026/: ICRA2026_benchmark_speedups.cpp  eval_manipulator.cpp
examples/extras/: print_bsplines_and_basis_functions.cpp
examples/multiple_compilation_units/: main.cpp  second.h
python/: CMakeLists.txt
python/blast/: __init__.py
python/src/: bind_manipulator.cpp  bind_math.cpp  bind_optimization.cpp  bind_task.cpp  bind_trajectory.cpp  bind_world.cpp  conversions.hpp  module.cpp
src/: CMakeLists.txt  blast.h  blast_error.h  blast_manipulator.h  blast_math.hpp  blast_optimization.h  blast_profile.hpp  blast_utilities.cpp  blast_utilities.hpp  blast_world.h
src/Collision/: collision_ga.cpp  collision_gwo.cpp  collision_pso.cpp  world.cpp
src/Manipulator/: Gen3.cpp  Link6.cpp  R2.cpp
src/Math/: Array.cpp  Mat3.cpp  Matrix.cpp  Vec3.cpp  math.cpp
src/Optimization/: Optimization.cpp
src/Trajectory/: bspline.cpp  polynomial_5order.cpp  trajectory.cpp
src/World/: collision_ga.cpp  collision_gwo.cpp  collision_pso.cpp  world.cpp  world.h
src/gpu/: manipulator.cuh  trajectory.cuh
src/manipulator/: Gen3.cpp  Link6.cpp  R2.cpp
src/math/: Array.hpp  Mat3.hpp  Matrix.hpp  Vec3.hpp  misc.hpp
src/trajectory/: polynomial_5order.cpp
src/world/: collision_ga.cpp  collision_pso.cpp  world.cpp  world.h
tests/: CMakeLists.txt  test_helper.hpp  test_profiler.cpp  test_splines.cpp  test_threadpool.cpp  tests.cpp  tests.cu
tests/acceleration/: basis_a.csv  basis_p.csv  basis_v.csv  bench_accelerations.cpp  bench_gradients_acceleration.cpp  bench_inplace.cpp  link6_initial_guess.csv  test_accelerations.cpp  test_constraints_acceleration.cpp  test_gradients_acceleration.cpp  test_inplace.cpp
tests/benchmarks/: bench_constraints.cpp  bench_core.cpp  bench_functions.cpp  bench_generic.cpp  bench_manipulator.cpp  bench_optimization_methods.cpp  bench_paper_gradients.cpp  bench_test_manip.cpp
tests/container/: test_objmatrix.cpp
tests/manipulators/: test_auto_manip.cpp  test_functions.cpp  test_generic_crx25.cpp  test_generic_gen3.cpp  test_generic_link6.cpp  test_generic_ur5e.cpp  test_manipulator_constructor.cpp
tests/math/: test_array.cpp  test_mat3.cpp  test_matrix.cpp  test_misc.cpp  test_vec3.cpp
tests/optimization/: test_constraints.cpp  test_optimization_basic.cpp  test_optimization_task_violation.cpp  test_task.cpp
tests/python/: conftest.py  test_math.py  test_optimization.py
tests/test_helper/: scenes.hpp  test_functions.hpp  test_helper.hpp
tests/test_manipulator/: test_Link6.cpp
tests/trajectory/: test_bsplines.cpp  test_polynomial.cpp
tests/world/: test_primitives.cpp
(+51 files in other folders)
