[build-system]
requires = ["scikit-build-core>=0.9", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "blast-py"
version = "0.1.0"
description = "Python bindings for the Blast trajectory optimization library"
requires-python = ">=3.9"
dependencies = ["numpy>=1.24"]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = ["-DBLAST_BUILD_PYTHON=ON"]
wheel.packages = ["python/blast"]

[tool.scikit-build.cmake.define]
BLAST_USE_DOUBLES = "1"
CMAKE_CXX_FLAGS = "-march=native"
CMAKE_C_FLAGS = "-march=native"

[tool.pytest.ini_options]
pythonpath = ["python"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
blast-py = { path = ".", editable = true }

[tool.pixi.tasks]
configure = "cmake --preset dev"
build-examples = { cmd = "cmake --build --preset dev", depends-on = [
    "configure",
] }
example-01 = { cmd = "./build/dev/examples/example_01_forward_kinematics", depends-on = [
    "build-examples",
] }
example-02 = { cmd = "./build/dev/examples/example_02_trajectory_optimization", depends-on = [
    "build-examples",
] }
example-03 = { cmd = "./build/dev/examples/example_03_collision_avoidance", depends-on = [
    "build-examples",
] }

[tool.pixi.dependencies]
cmake = ">=4.3.3,<5"
ninja = ">=1.13.2,<2"
cxx-compiler = ">=1.11.0,<2"
